force-app/main/default/objects/copado__Data_Change_Event_Condition__c/copado__Data_Change_Event_Condition__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Copado Data Change Event Conditions</label>
</CustomObject>