force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Allow_All_Data__c.field-meta.xml
<CustomField>
    <fullName>copado__Allow_All_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow All Data</label>
    <type>Checkbox</type>
</CustomField>