force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Condition_Key__c.field-meta.xml
<CustomField>
    <fullName>copado__Condition_Key__c</fullName>
    <label>Condition Key</label>
    <length>242</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>