force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>copado__Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>