force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Delete__c.field-meta.xml
<CustomField>
    <fullName>copado__Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>