force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Insert__c.field-meta.xml
<CustomField>
    <fullName>copado__Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert</label>
    <type>Checkbox</type>
</CustomField>