force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>