force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>