force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Subscriber_Code__c.field-meta.xml
<CustomField>
    <fullName>copado__Subscriber_Code__c</fullName>
    <label>Subscriber Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>