force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Undelete__c.field-meta.xml
<CustomField>
    <fullName>copado__Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undelete</label>
    <type>Checkbox</type>
</CustomField>