force-app/main/default/objects/copado__Data_Change_Event_Condition__c/fields/copado__Update__c.field-meta.xml
<CustomField>
    <fullName>copado__Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>